improves the comparison plot

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T23:06:41.765477Z",
-     "start_time": "2024-09-30T23:06:39.860925Z"
+     "end_time": "2024-10-02T19:15:44.352339Z",
+     "start_time": "2024-10-02T19:15:44.344071Z"
     }
    },
    "outputs": [],
@@ -29,8 +29,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T23:06:42.054460Z",
-     "start_time": "2024-09-30T23:06:41.766589Z"
+     "end_time": "2024-10-02T19:15:44.704060Z",
+     "start_time": "2024-10-02T19:15:44.421928Z"
     }
    },
    "outputs": [],
@@ -51,19 +51,31 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T20:08:52.221639Z",
+     "start_time": "2024-10-02T20:08:52.218138Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "def binary_search_range(a, b, n_samples=None):\n",
-    "    to_try = sorted([a,b])\n",
-    "    yield from to_try\n",
+    "def binary_search_range(*args, n_samples=None, tried=()):\n",
+    "    # usual args are min, max\n",
+    "    tried = list(tried)\n",
     "\n",
-    "    while n_samples is None or len(to_try) < n_samples:\n",
-    "        to_try = sorted(to_try)\n",
-    "        idx = np.argmax(np.diff(to_try))\n",
-    "        new_x = (to_try[idx] + to_try[idx+1])/2\n",
-    "        to_try.append(new_x)\n",
-    "        yield new_x"
+    "    while n_samples is None or len(tried) < n_samples:\n",
+    "        for new_x in args:\n",
+    "            if new_x not in tried:\n",
+    "                yield new_x\n",
+    "                tried.append(new_x)\n",
+    "                continue\n",
+    "                \n",
+    "        tried = sorted(tried)\n",
+    "        idx = np.argmax(np.diff(tried))\n",
+    "        new_x = (tried[idx] + tried[idx+1])/2\n",
+    "        \n",
+    "        yield new_x\n",
+    "        tried.append(new_x)\n"
    ]
   },
   {
@@ -72,21 +84,33 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T23:19:01.782118Z",
-     "start_time": "2024-09-30T23:17:37.715819Z"
+     "end_time": "2024-10-02T19:15:44.732593Z",
+     "start_time": "2024-10-02T19:15:44.708788Z"
     }
    },
    "outputs": [],
    "source": [
+    "runs = []\n",
+    "tried = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "\n",
-    "runs = []\n",
-    "tried = []\n",
     "fig, axs = None, None\n",
-    "\n",
-    "for x in binary_search_range(1e-10,1):\n",
+    "for x in binary_search_range(-5, 5, n_samples=5, tried=tried):\n",
     "    parameters = dict(prp.PipelineRun.default_parameter_values['zong22'])\n",
-    "    parameters['neural_smoothing_tau'] = x\n",
+    "    parameters['neural_scale'] = 1/1000\n",
+    "    parameters['neural_lag'] = 0\n",
+    "    parameters['exit_time'] = -1\n",
+    "    parameters['sub_dataset_identifier'] = 3\n",
+    "    parameters['bw_step'] = 10**0.138\n",
     "    run = prp.PipelineRun(**parameters)\n",
     "    runs.append(run)\n",
     "    tried.append(x)\n",
@@ -100,24 +124,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
-   "metadata": {},
+   "id": "6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T19:54:58.650835Z",
+     "start_time": "2024-10-02T19:54:58.419397Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "runs[-1].plot_results()\n",
-    "\n",
-    "# plt.gcf().axes[-2].set_xlim([550, 600])\n"
+    "reload(prp)\n",
+    "fig, axs = prp.PipelineRun.compare_metrics_across_runs(tried, runs);\n",
+    "# fig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T23:53:14.481828Z",
-     "start_time": "2024-09-30T23:53:13.582992Z"
+     "end_time": "2024-10-02T19:57:42.070646Z",
+     "start_time": "2024-10-02T19:57:41.480912Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "runs[2].plot_results()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T19:21:32.276949Z",
+     "start_time": "2024-10-02T19:21:32.169319Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(run.pro.Q[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T19:21:32.713320Z",
+     "start_time": "2024-10-02T19:21:32.277643Z"
     }
    },
    "outputs": [],
@@ -174,11 +234,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T23:19:03.138552Z",
-     "start_time": "2024-09-30T23:19:02.874639Z"
+     "end_time": "2024-10-02T19:21:32.965713Z",
+     "start_time": "2024-10-02T19:21:32.713924Z"
     }
    },
    "outputs": [],
@@ -202,8 +262,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
-   "metadata": {},
+   "id": "11",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-02T19:21:33.011498Z",
+     "start_time": "2024-10-02T19:21:32.966615Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -222,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -231,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
