--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T19:15:44.352339Z",
-     "start_time": "2024-10-02T19:15:44.344071Z"
+     "end_time": "2024-10-04T01:44:50.884700Z",
+     "start_time": "2024-10-04T01:44:49.008192Z"
     }
    },
    "outputs": [],
@@ -18,6 +18,11 @@
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
     "import prediction_regression_pipeline as prp\n",
+    "from adaptive_latents.plotting_functions import PredictionVideo\n",
+    "from adaptive_latents import (\n",
+    "    AnimationManager\n",
+    ")\n",
+    "import pandas as pd\n",
     "from importlib import reload\n",
     "from IPython import display\n",
     "\n"
@@ -29,8 +34,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T19:15:44.704060Z",
-     "start_time": "2024-10-02T19:15:44.421928Z"
+     "end_time": "2024-10-04T01:09:07.140017Z",
+     "start_time": "2024-10-04T01:09:06.785263Z"
     }
    },
    "outputs": [],
@@ -43,251 +48,12 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "\n",
-    "## Prediction tables\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T20:08:52.221639Z",
-     "start_time": "2024-10-02T20:08:52.218138Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def binary_search_range(*args, n_samples=None, tried=()):\n",
-    "    # usual args are min, max\n",
-    "    tried = list(tried)\n",
-    "\n",
-    "    while n_samples is None or len(tried) < n_samples:\n",
-    "        for new_x in args:\n",
-    "            if new_x not in tried:\n",
-    "                yield new_x\n",
-    "                tried.append(new_x)\n",
-    "                continue\n",
-    "                \n",
-    "        tried = sorted(tried)\n",
-    "        idx = np.argmax(np.diff(tried))\n",
-    "        new_x = (tried[idx] + tried[idx+1])/2\n",
-    "        \n",
-    "        yield new_x\n",
-    "        tried.append(new_x)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T19:15:44.732593Z",
-     "start_time": "2024-10-02T19:15:44.708788Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "runs = []\n",
-    "tried = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "fig, axs = None, None\n",
-    "for x in binary_search_range(-5, 5, n_samples=5, tried=tried):\n",
-    "    parameters = dict(prp.PipelineRun.default_parameter_values['zong22'])\n",
-    "    parameters['neural_scale'] = 1/1000\n",
-    "    parameters['neural_lag'] = 0\n",
-    "    parameters['exit_time'] = -1\n",
-    "    parameters['sub_dataset_identifier'] = 3\n",
-    "    parameters['bw_step'] = 10**0.138\n",
-    "    run = prp.PipelineRun(**parameters)\n",
-    "    runs.append(run)\n",
-    "    tried.append(x)\n",
-    "    \n",
-    "    fig, axs = prp.PipelineRun.compare_metrics_across_runs(tried, runs, fig, axs)\n",
-    "    display.clear_output(wait=True)\n",
-    "    display.display(fig)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T19:54:58.650835Z",
-     "start_time": "2024-10-02T19:54:58.419397Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "reload(prp)\n",
-    "fig, axs = prp.PipelineRun.compare_metrics_across_runs(tried, runs);\n",
-    "# fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T19:57:42.070646Z",
-     "start_time": "2024-10-02T19:57:41.480912Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "runs[2].plot_results()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T19:21:32.276949Z",
-     "start_time": "2024-10-02T19:21:32.169319Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(run.pro.Q[:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T19:21:32.713320Z",
-     "start_time": "2024-10-02T19:21:32.277643Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    " \n",
-    "fig, axs = plt.subplots(nrows=3, ncols=2, squeeze=False, layout='tight', figsize=(10, 10))\n",
-    "e1, e2 = np.zeros(6), np.zeros(6)\n",
-    "e1[0] = 1\n",
-    "e2[1] = 1\n",
-    "\n",
-    "for idx, latents in enumerate([run.pro_latents, run.jpca_latents, run.ica_latents]):\n",
-    "    ax: plt.Axes = axs[idx, 0]\n",
-    "    # ax.scatter(latents[:,0], latents[:,1], s=5)\n",
-    "\n",
-    "    d_latents = np.diff(latents, axis=0)\n",
-    "    d_latents = d_latents / np.linalg.norm(d_latents, axis=1)[:, np.newaxis]\n",
-    "    ax.quiver(latents[:-1] @ e1, latents[:-1]@e2, d_latents@e1, d_latents@e2, scale=1 / 20, units='dots', alpha=1)\n",
-    "    x1, x2, y1, y2 = ax.axis()\n",
-    "    x_points = np.linspace(x1, x2, 21)\n",
-    "    y_points = np.linspace(y1, y2, 21)\n",
-    "    # mgrid = np.meshgrid(*[np.linspace(latents[:, i].min(), latents[:, i].max(), 10) for i in range(2)])\n",
-    "    origins = []\n",
-    "    arrows = []\n",
-    "    for i in range(len(x_points) - 1):\n",
-    "        for j in range(len(y_points) - 1):\n",
-    "            proj_1 = (latents[:-1] @ e1)\n",
-    "            proj_2 = (latents[:-1] @ e2)\n",
-    "            s = (x_points[i] <= proj_1) & (proj_1 < x_points[i + 1]) & (y_points[j] <= proj_2) & (\n",
-    "                    proj_2 < y_points[j + 1])\n",
-    "            if s.sum():\n",
-    "                arrow = d_latents[s].mean(axis=0)\n",
-    "                arrow = arrow / np.linalg.norm(arrow)\n",
-    "                arrows.append(arrow)\n",
-    "                origins.append([x_points[i:i + 2].mean(), y_points[j:j + 2].mean()])\n",
-    "    origins, arrows = np.array(origins), np.array(arrows)\n",
-    "    ax.quiver(origins[:, 0], origins[:, 1], arrows @ e1, arrows @ e2, scale=1 / 20, units='dots', color='red')\n",
-    "\n",
-    "    ax.axis('equal')\n",
-    "\n",
-    "axs[0, 1].plot(run.pro.inverse_transform(e1, 2))\n",
-    "axs[0, 1].plot(run.pro.inverse_transform(e2, 2))\n",
-    "axs[0, 0].set_ylabel('pro')\n",
-    "\n",
-    "axs[1, 1].plot(run.pro.inverse_transform(run.jpca.inverse_transform(e1, 2), 2))\n",
-    "axs[1, 1].plot(run.pro.inverse_transform(run.jpca.inverse_transform(e2, 2), 2))\n",
-    "axs[1, 0].set_ylabel('jpca')\n",
-    "\n",
-    "axs[2, 1].plot(run.pro.inverse_transform(run.ica.inverse_transform(e1, 2), 2))\n",
-    "axs[2, 1].plot(run.pro.inverse_transform(run.ica.inverse_transform(e2, 2), 2))\n",
-    "axs[2, 0].set_ylabel('ica')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T19:21:32.965713Z",
-     "start_time": "2024-10-02T19:21:32.713924Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "if isinstance(run.d, datasets.Zong22Dataset):\n",
-    "    desired_pattern = np.mean(latents[-101:-1], axis=0)\n",
-    "    current_pattern = latents[-1]\n",
-    "    desired_stim = desired_pattern - current_pattern\n",
-    "    \n",
-    "    desired_pattern = (desired_stim @ run.pro.Q.T)[:run.d.neural_data.a.shape[-1]]\n",
-    "    \n",
-    "    near_zero = np.abs(desired_stim) < 100\n",
-    "    print(near_zero.sum())\n",
-    "    desired_stim[near_zero] = np.nan\n",
-    "    \n",
-    "    \n",
-    "    fig, ax = plt.subplots()\n",
-    "    run.d.show_stim_pattern(ax, np.abs(desired_pattern))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T19:21:33.011498Z",
-     "start_time": "2024-10-02T19:21:32.966615Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "latents = jpca_latents\n",
-    "\n",
-    "dim_1, dim_2 = 0,1\n",
-    "pf.plot_history_with_tail(ax, latents, dim_1=dim_1, dim_2=dim_2)\n",
-    "means = np.mean(latents, axis=0)\n",
-    "\n",
-    "ax.arrow(latents[-1,dim_1], latents[-1,dim_2], means[dim_1] - latents[-1,dim_1], means[dim_2] - latents[-1,dim_2], zorder=5, head_width=.1, color='k')\n",
-    "\n",
-    "ax.axis('equal');\n",
-    "\n"
+    "# Odoherty21 Portion"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "3",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -296,8 +62,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
-   "metadata": {},
+   "id": "4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:09:12.822220Z",
+     "start_time": "2024-10-04T01:09:07.916891Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
@@ -324,7 +95,272 @@
     "        am.axs[0,1].plot(d.behavioral_data.a[s,0,0], d.behavioral_data.a[s,0,1])\n",
     "        pf.use_bigger_lims(am.axs[0,1], old_lims)\n",
     "        \n",
-    "        am.grab_frame()"
+    "        am.grab_frame()\n",
+    "        \n",
+    "display.display(display.Video())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "## Trajectory with 2d histogram background"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:05:49.295595Z",
+     "start_time": "2024-10-04T01:04:25.486122Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "run = prp.PipelineRun(**prp.PipelineRun.default_parameter_values['odoherty21'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:32:36.436970Z",
+     "start_time": "2024-10-04T01:32:35.745728Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(ncols=3, figsize=(15, 5))\n",
+    "\n",
+    "def plot_with_tail(ax, data, current_t, tail_length):\n",
+    "    ax.cla()\n",
+    "    # ax.axis('equal')\n",
+    "    ax.hist2d(data[:,0], data[:,1], 40)\n",
+    "    s = (current_t - tail_length < data.t) & (data.t < current_t)\n",
+    "    ax.plot(data[s,0], data[s,1], color='black', linewidth=4)\n",
+    "    ax.plot(data[s,0], data[s,1], color='white', linewidth=3)\n",
+    "    ax.axis('off')\n",
+    "    \n",
+    "\n",
+    "current_t = 35\n",
+    "tail_length = 1\n",
+    "\n",
+    "plot_with_tail(axs[0], run.neural_target, current_t, tail_length)\n",
+    "plot_with_tail(axs[1], run.jpca_latents,  current_t, tail_length)\n",
+    "plot_with_tail(axs[2], run.beh_target, current_t, tail_length)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "## Data, Latent, Prediction graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:05:50.725435Z",
+     "start_time": "2024-10-04T01:05:49.473189Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pv = PredictionVideo(run.d)\n",
+    "\n",
+    "assert (run.next_bubble_joint_predictions.t == run.beh_predictions.t).all()\n",
+    "with pv.am:\n",
+    "    for current_t in np.linspace(35, 36, 10):\n",
+    "        pv.plot_for_video_t(\n",
+    "            current_t, \n",
+    "            run.jpca_latents, run.jpca_latents.t, \n",
+    "            run.next_bubble_joint_predictions, run.beh_predictions, run.beh_predictions.t,\n",
+    "            run.streams\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "## Stream table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:21:57.868533Z",
+     "start_time": "2024-10-04T01:20:52.284147Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "run_all = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21']))\n",
+    "run_no_neural = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[0])))\n",
+    "run_no_beh = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[1])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:29:14.784468Z",
+     "start_time": "2024-10-04T01:29:14.761677Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def make_row(run):\n",
+    "    return ({\n",
+    "        'beh_x': run.beh_correlations[0],\n",
+    "        'beh_y': run.beh_correlations[1],\n",
+    "    } | {f'neural_{n}': run.neural_correlations[n] for n in range(len(run.neural_correlations))})\n",
+    "    \n",
+    "pd.DataFrame(\n",
+    "    [\n",
+    "        make_row(run_all),\n",
+    "        make_row(run_no_neural),\n",
+    "        make_row(run_no_beh)\n",
+    "    ], \n",
+    "    index = ['all', 'no_neural', 'no_beh']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "# Zong22 Portion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:46:21.021418Z",
+     "start_time": "2024-10-04T01:44:59.806660Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "run = prp.PipelineRun(**prp.PipelineRun.default_parameter_values['zong22'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15",
+   "metadata": {},
+   "source": [
+    "## Dimensionality reduction comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:46:25.274906Z",
+     "start_time": "2024-10-04T01:46:24.574295Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(ncols=3, nrows=1, squeeze=False, figsize=(15, 10), layout='tight')\n",
+    "\n",
+    "current_t = run.neural_target.t.max()\n",
+    "\n",
+    "plot_with_tail(axs[0,0], run.pro_latents, current_t, tail_length=2)\n",
+    "plot_with_tail(axs[0,1], run.jpca_latents, current_t, tail_length=2)\n",
+    "plot_with_tail(axs[0,2], run.ica_latents, current_t, tail_length=2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T01:47:11.342604Z",
+     "start_time": "2024-10-04T01:47:10.909475Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "run.plot_flow_fields(grid_n=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18",
+   "metadata": {},
+   "source": [
+    "## Stimulation figure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "latents = run.jpca_latents\n",
+    "\n",
+    "desired_pattern = np.mean(latents[-101:-1], axis=0)\n",
+    "current_pattern = latents[-1]\n",
+    "desired_stim = desired_pattern - current_pattern\n",
+    "\n",
+    "desired_pattern = (desired_stim @ run.pro.Q.T)[:run.d.neural_data.a.shape[-1]]\n",
+    "\n",
+    "near_zero = np.abs(desired_stim) < 100\n",
+    "print(near_zero.sum())\n",
+    "desired_stim[near_zero] = np.nan\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "run.d.show_stim_pattern(ax, np.abs(desired_pattern))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "dim_1, dim_2 = 0,1\n",
+    "pf.plot_history_with_tail(ax, latents, dim_1=dim_1, dim_2=dim_2)\n",
+    "means = np.mean(latents, axis=0)\n",
+    "ax.arrow(latents[-1,dim_1], latents[-1,dim_2], means[dim_1] - latents[-1,dim_1], means[dim_2] - latents[-1,dim_2], zorder=5, head_width=.1, color='k')\n",
+    "ax.axis('equal');\n",
+    "\n"
    ]
   }
  ],
