adds plots for v1 of the 2024 SFN presentation

--- a/workspace/sfn_results.ipynb
+++ b/workspace/sfn_results.ipynb
@@ -15,6 +15,8 @@
     "import numpy as np\n",
     "\n",
     "import adaptive_latents.input_sources.datasets as datasets\n",
+    "import adaptive_latents\n",
+    "from adaptive_latents.plotting_functions import AnimationManager\n",
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
     "import prediction_regression_pipeline as prp\n",
@@ -220,6 +222,14 @@
     "axs[2, 1].plot(run.pro.inverse_transform(run.ica.inverse_transform(e1, 2), 2))\n",
     "axs[2, 1].plot(run.pro.inverse_transform(run.ica.inverse_transform(e2, 2), 2))\n",
     "axs[2, 0].set_ylabel('ica')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "# Other Datasts"
    ]
   }
  ],
