--- a/workspace/zong22.ipynb
+++ b/workspace/zong22.ipynb
@@ -8,8 +8,7 @@
     "ExecuteTime": {
      "end_time": "2024-09-21T23:11:57.458960Z",
      "start_time": "2024-09-21T23:11:54.800508Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -20,18 +19,20 @@
     "from adaptive_latents import (\n",
     "    Pipeline, \n",
     "    CenteringTransformer, \n",
-    "    proSVD, \n",
-    "    sjPCA, \n",
-    "    AnimationManager, \n",
-    "    KernelSmoother, \n",
-    "    SwitchingParallelTransformer, \n",
-    "    mmICA, \n",
-    "    VanillaOnlineRegressor, \n",
+    "    proSVD,\n",
+    "    sjPCA,\n",
+    "    AnimationManager,\n",
+    "    KernelSmoother,\n",
+    "    SwitchingParallelTransformer,\n",
+    "    mmICA,\n",
+    "    VanillaOnlineRegressor,\n",
     "    NumpyTimedDataSource,\n",
     ")\n",
     "\n",
     "import adaptive_latents.plotting_functions as pf\n",
-    "from adaptive_latents import datasets\n"
+    "from adaptive_latents import datasets\n",
+    "from IPython import display\n",
+    "\n"
    ]
   },
   {
@@ -68,12 +69,12 @@
     "    \n",
     "im = np.mean(planes, axis=0)\n",
     "\n",
-    "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "axs[0].matshow(im)\n",
+    "# fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "# axs[0].matshow(im)\n",
     "\n",
-    "axs[1].matshow(-im, cmap='Grays')\n",
-    "xs, ys = list(zip(*[cell['med'] for cell in d.stat]))\n",
-    "axs[1].scatter(ys,xs, s=7)\n",
+    "# axs[1].matshow(-im, cmap='Grays')\n",
+    "# xs, ys = list(zip(*[cell['med'] for cell in d.stat]))\n",
+    "# axs[1].scatter(ys,xs, s=7)\n",
     "# plt.colorbar()\n"
    ]
   },
@@ -81,6 +82,40 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('started')\n",
+    "extrema = (float('inf'), -float('inf'))\n",
+    "\n",
+    "fig, axs = plt.subplots(ncols=2, squeeze=False, width_ratios=[11,1])\n",
+    "\n",
+    "with AnimationManager(fps=15, filetype='gif', figsize=(5,5), fig=fig, make_axs=False) as am:\n",
+    "    for idx, plane in enumerate(planes[:60]):\n",
+    "        axs[0,0].cla()\n",
+    "        extrema = (min(plane.min(), extrema[0]), max(plane.max(), extrema[1]))\n",
+    "        cax = axs[0,0].matshow(plane, clim=extrema)\n",
+    "        axs[0,0].set_title(f\"t={idx/15:.2f}s\")\n",
+    "        fig.colorbar(cax, axs[0,1])\n",
+    "        am.grab_frame()\n",
+    "print('done')        \n",
+    "display.display(display.Image(am.outfile, embed=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-21T22:31:42.106287Z",
@@ -95,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-21T23:23:15.971945Z",
@@ -129,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-21T23:46:19.306316Z",
@@ -147,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-21T23:01:55.354388Z",
@@ -238,21 +273,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
