state at SFN 2024 talk

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -30,8 +30,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from adaptive_latents.plotting_functions import plot_history_with_tail\n",
+    "adaptive_latents.plotting_functions = reload(adaptive_latents.plotting_functions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
    "metadata": {},
    "source": [
     "* [jPCA figure](https://www.dropbox.com/scl/fo/duf5zbwcibsux467c6oc9/AIN-ZiFsy2Huyh8h7VMdL7g?dl=0&e=1&preview=Basic+jPCA+plot.pdf&rlkey=3o5axmq5hirel4cij7g64jc0r)\n",
@@ -43,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:09:08.172203Z",
@@ -53,17 +64,6 @@
    "outputs": [],
    "source": [
     "!echo $(hostname) $(git rev-parse --short HEAD)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from adaptive_latents.plotting_functions import plot_history_with_tail\n",
-    "adaptive_latents.plotting_functions = reload(adaptive_latents.plotting_functions)"
    ]
   },
   {
@@ -140,6 +140,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "datasets.Peyrache15Dataset().neural_data.a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "d = datasets.Zong22Dataset()\n",
     "intro_plot(d)"
    ]
@@ -147,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "# Odoherty21 Portion"
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -184,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "## Trajectory with 2d histogram background"
@@ -193,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:34:23.476191Z",
@@ -209,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T17:05:10.647632Z",
@@ -236,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "## Data, Latent, Prediction graph"
@@ -245,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:43:30.921132Z",
@@ -276,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "## Stream table"
@@ -285,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:49:55.001572Z",
@@ -316,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "source": [
     "# Zong22 Portion"
@@ -325,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:38.534593Z",
@@ -334,13 +344,12 @@
    },
    "outputs": [],
    "source": [
-    "zong_run = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['zong22'] | dict(drop_behavior=True, sub_dataset_identifier=0)))\n",
-    "run = zong_run"
+    "zong_run = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['zong22'] | dict(drop_behavior=True, sub_dataset_identifier=0)))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "## Dimensionality reduction comparison"
@@ -349,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T17:05:18.245911Z",
@@ -377,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T17:05:23.856250Z",
@@ -458,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "source": [
     "## Stimulation figure"
@@ -467,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
@@ -480,7 +489,7 @@
     "latents = run.jpca_latents\n",
     "\n",
     "\n",
-    "fig, axs = plt.subplots(ncols=2,figsize=(8,4))\n",
+    "fig, axs = plt.subplots(ncols=2,figsize=(8,4), layout='tight')\n",
     "\n",
     "\n",
     "dim_1, dim_2 = 0,1\n",
@@ -496,9 +505,11 @@
     "means = np.mean(latents, axis=0)\n",
     "\n",
     "tail_length = 1\n",
-    "with AnimationManager(fig=fig, make_axs=False, fps=20, filetype='mp4') as am:\n",
-    "    for current_t in np.linspace(500, 540, 40*20):\n",
-    "        last_frame = current_t == 540\n",
+    "with AnimationManager(fig=fig, make_axs=False, fps=20, filetype='mp4', dpi=400) as am:\n",
+    "    a = 500\n",
+    "    l = 10.5\n",
+    "    for current_t in np.linspace(a, a+l, int(round(l*20))):\n",
+    "        last_frame = current_t == a+l\n",
     "        \n",
     "        ax = axs[0]\n",
     "        ax.cla()\n",
@@ -514,6 +525,8 @@
     "            zorder=5, color='k', length_includes_head=True,  width=0.001, head_width=.04,\n",
     "            )\n",
     "        ax.axis('equal');\n",
+    "        # ax.set_title(f'{current_t:.2f}')\n",
+    "\n",
     "\n",
     "        \n",
     "        ax = axs[1]\n",
@@ -530,10 +543,84 @@
     "            \n",
     "    \n",
     "            ax.scatter(ys, xs, s=desired_stim*30, color='red')\n",
-    "            # ax.set_title(f'{current_t:.2f}')\n",
     "        ax.axis('off')\n",
-    "        if not last_frame:\n",
-    "            am.grab_frame()"
+    "\n",
+    "        am.grab_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T16:55:39.633898Z",
+     "start_time": "2024-10-04T16:55:39.558276Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "run = zong_run\n",
+    "latents = run.jpca_latents\n",
+    "\n",
+    "\n",
+    "fig, axs = plt.subplots(ncols=2,figsize=(8,4), layout='tight')\n",
+    "\n",
+    "\n",
+    "dim_1, dim_2 = 0,1\n",
+    "\n",
+    "\n",
+    "planes = []\n",
+    "for i in range(500):\n",
+    "    run.d.raw_images.seek(i)\n",
+    "    planes.append(np.array(run.d.raw_images))\n",
+    "\n",
+    "im = np.mean(planes, axis=0)\n",
+    "\n",
+    "means = np.mean(latents, axis=0)\n",
+    "\n",
+    "tail_length = 1\n",
+    "with AnimationManager(fig=fig, make_axs=False, fps=20, filetype='mp4', dpi=400) as am:\n",
+    "    a = 500 + 10.5\n",
+    "    l = 3\n",
+    "    for current_t in np.linspace(a, a+l, int(round(l*20))):\n",
+    "        last_frame = current_t == a+l\n",
+    "        \n",
+    "        ax = axs[0]\n",
+    "        ax.cla()\n",
+    "        # plot_history_with_tail(ax, latents, current_t, tail_length=1)\n",
+    "        plot_history_with_tail(ax, latents, current_t, tail_length=1, invisible=False)\n",
+    "\n",
+    "        s = latents.t <= current_t\n",
+    "        current_state = latents[s][-1]\n",
+    "\n",
+    "        if last_frame:\n",
+    "            ax.arrow(\n",
+    "            current_state[dim_1], current_state[dim_2], means[dim_1] - current_state[dim_1], means[dim_2] - current_state[dim_2], \n",
+    "            zorder=5, color='k', length_includes_head=True,  width=0.001, head_width=.04,\n",
+    "            )\n",
+    "        ax.axis('equal');\n",
+    "        # ax.set_title(f'{current_t:.2f}')\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        ax = axs[1]\n",
+    "        ax.cla()\n",
+    "        if last_frame:\n",
+    "            desired_state = means - current_state\n",
+    "            desired_stim = (desired_state @ run.pro.Q.T)[:run.d.neural_data.a.shape[-1]]\n",
+    "    \n",
+    "            desired_stim = np.abs(desired_stim)\n",
+    "            desired_stim[np.abs(desired_stim) < .1] = np.nan\n",
+    "    \n",
+    "            ax.matshow(-im, cmap='Grays')\n",
+    "            xs, ys = list(zip(*[cell['med'] for cell in run.d.stat]))\n",
+    "            \n",
+    "    \n",
+    "            ax.scatter(ys, xs, s=desired_stim*30, color='red')\n",
+    "        ax.axis('off')\n",
+    "\n",
+    "        am.grab_frame()"
    ]
   }
  ],
