adds project state at COSYNE submission

--- a/workspace/sfn_figures_monkey.ipynb
+++ b/workspace/sfn_figures_monkey.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-04T16:09:07.891557Z",
-     "start_time": "2024-10-04T16:09:06.235384Z"
+     "end_time": "2024-10-22T20:29:29.433527Z",
+     "start_time": "2024-10-22T20:29:29.426223Z"
     }
    },
    "outputs": [],
@@ -33,7 +33,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T20:29:30.030104Z",
+     "start_time": "2024-10-22T20:29:30.027573Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from adaptive_latents.plotting_functions import plot_history_with_tail\n",
@@ -57,8 +62,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-04T16:09:08.172203Z",
-     "start_time": "2024-10-04T16:09:07.892410Z"
+     "end_time": "2024-10-22T20:29:31.635858Z",
+     "start_time": "2024-10-22T20:29:31.219222Z"
     }
    },
    "outputs": [],
@@ -78,7 +83,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T20:29:33.785796Z",
+     "start_time": "2024-10-22T20:29:33.768237Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def intro_plot(d, tail_length=5, duration=10, start_time=10, fps=20):\n",
@@ -206,8 +216,8 @@
    "id": "15",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-04T16:34:23.476191Z",
-     "start_time": "2024-10-04T16:09:12.568680Z"
+     "end_time": "2024-10-22T22:23:04.376908Z",
+     "start_time": "2024-10-22T21:58:45.347209Z"
     }
    },
    "outputs": [],
@@ -298,21 +308,21 @@
    "id": "20",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-04T16:49:55.001572Z",
-     "start_time": "2024-10-04T16:43:30.921820Z"
+     "end_time": "2024-10-23T21:39:48.823513Z",
+     "start_time": "2024-10-23T21:39:46.639010Z"
     }
    },
    "outputs": [],
    "source": [
     "run_all = odoherty_run\n",
-    "if False:\n",
+    "if True:\n",
     "    run_no_neural = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[0])))\n",
     "    run_no_beh = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[1])))\n",
     "    def make_row(run):\n",
     "        return ({\n",
-    "            'beh_x': run.beh_correlations[0],\n",
-    "            'beh_y': run.beh_correlations[1],\n",
-    "        } | {f'neural_{n}': run.neural_correlations[n] for n in range(len(run.neural_correlations))})\n",
+    "            'beh_x': run.beh_nrmses[0],\n",
+    "            'beh_y': run.beh_nrmses[1],\n",
+    "        } | {f'neural_{n}': run.neural_nrmses[n] for n in range(len(run.neural_correlations))})\n",
     "        \n",
     "    pd.DataFrame(\n",
     "        [\n",
@@ -325,8 +335,247 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "21",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T21:40:12.169790Z",
+     "start_time": "2024-10-23T21:40:12.164585Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(\n",
+    "    [\n",
+    "        make_row(run_all),\n",
+    "        make_row(run_no_neural),\n",
+    "        make_row(run_no_beh)\n",
+    "    ],\n",
+    "    index = ['all', 'no_neural', 'no_beh']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T21:27:36.912178Z",
+     "start_time": "2024-10-23T21:27:36.767137Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(nrows=2, ncols=1, squeeze=False, sharex=True, figsize=(4, 9))\n",
+    "\n",
+    "pred_color = 'C0'\n",
+    "control_color = 'C1'\n",
+    "\n",
+    "# pred_color = '#D11149'\n",
+    "# control_color = '#6610F2'\n",
+    "\n",
+    "run_all = odoherty_run\n",
+    "\n",
+    "xlim = [500, 550]\n",
+    "\n",
+    "mode = 'neural'\n",
+    "pred, target = getattr(run_all, f'{mode}_predictions'), getattr(run_all, f'{mode}_target')\n",
+    "s = target.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[0,0].plot(target.t[s], target[s, 1], 'k')\n",
+    "s = pred.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[0,0].plot(pred.t[s], pred[s,1], color=pred_color)\n",
+    "\n",
+    "control = getattr(run_no_neural, f'{mode}_predictions')\n",
+    "s = control.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[0,0].plot(control.t[s], control[s,1], '-', color=control_color)\n",
+    "\n",
+    "\n",
+    "mode = 'beh'\n",
+    "pred, target = getattr(run_all, f'{mode}_predictions'), getattr(run_all, f'{mode}_target')\n",
+    "s = target.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[1,0].plot(target.t[s], target[s], 'k')\n",
+    "s = pred.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[1,0].plot(pred.t[s], pred[s], color=pred_color)\n",
+    "\n",
+    "control = getattr(run_no_neural, f'{mode}_predictions')\n",
+    "s = control.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[1,0].plot(control.t[s], control[s,:], '-', color=control_color)\n",
+    "\n",
+    "\n",
+    "axs[0,0].set_ylabel('neural latent 1')\n",
+    "axs[1,0].set_ylabel('arm position x and y (mm)')\n",
+    "\n",
+    "\n",
+    "for axis in axs[:, 0]:\n",
+    "    data_lim = np.array(axis.dataLim).T.flatten()\n",
+    "    bounds = data_lim\n",
+    "    bounds[:2] = (bounds[:2] - bounds[:2].mean()) * np.array([1.02, 1.02]) + bounds[:2].mean()\n",
+    "    bounds[2:] = (bounds[2:] - bounds[2:].mean()) * np.array([1.05, 1.05]) + bounds[2:].mean()\n",
+    "    axis.axis(bounds)\n",
+    "    axis.format_coord = lambda x, y: 'x={:g}, y={:g}'.format(x, y)\n",
+    "\n",
+    "# this prints the last-half means\n",
+    "for i, l in enumerate([\n",
+    "    [\n",
+    "        (0,f'{run_all.neural_correlations[1]:.2f}',dict(color=pred_color)),\n",
+    "        (1,f'{run_no_neural.neural_correlations[1]:.2f}',dict(color=control_color)),\n",
+    "    ], \n",
+    "    [\n",
+    "        (0, f'{run_all.beh_correlations[0]:.2f}', dict(color=pred_color)),\n",
+    "        (1, f'{run_all.beh_correlations[1]:.2f}', dict(color=pred_color)),\n",
+    "        (2, f'{run_no_neural.beh_correlations[0]:.2f}', dict(color=control_color)),\n",
+    "        (3, f'{run_no_neural.beh_correlations[1]:.2f}', dict(color=control_color)),\n",
+    "    ]\n",
+    "]):\n",
+    "    for idx, text, kw in l:\n",
+    "        x, y = 1.01, .93 - .1 * idx\n",
+    "        x, y = axs[i, 0].transLimits.inverted().transform([x, y])\n",
+    "        axs[i, 0].text(x, y, text, clip_on=False, verticalalignment='top', **kw)\n",
+    "\n",
+    "\n",
+    "fig.savefig(adaptive_latents.CONFIG['plot_save_path']/'performance.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T21:40:00.147935Z",
+     "start_time": "2024-10-23T21:39:59.455026Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(nrows=2, ncols=2, squeeze=False, sharex=True, figsize=(5, 7), layout='tight')\n",
+    "\n",
+    "pred_color = [\n",
+    "    '#770058',\n",
+    "    '#8E0045',\n",
+    "    '#9E0031',\n",
+    "]\n",
+    "control_color = [\n",
+    "    '#9CA3DB',\n",
+    "    '#677DB7',\n",
+    "    '#454B66',\n",
+    "]\n",
+    "\n",
+    "# control_color = [\n",
+    "#     '#BF3100',\n",
+    "#     '#EC9F05',\n",
+    "#     '#FF4E00',\n",
+    "# ]\n",
+    "\n",
+    "# pred_color = '#D11149'\n",
+    "# control_color = '#6610F2'\n",
+    "\n",
+    "run_all = odoherty_run\n",
+    "control_run = run_no_beh\n",
+    "\n",
+    "xlim = [500, 550]\n",
+    "\n",
+    "mode = 'neural'\n",
+    "pred, target = getattr(run_all, f'{mode}_predictions'), getattr(run_all, f'{mode}_target')\n",
+    "s = target.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[0,0].plot(target.t[s], target[s, 1], 'k')\n",
+    "axs[1, 0].plot(target.t[s], target[s, 1], 'k')\n",
+    "s = pred.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[0,0].plot(pred.t[s], pred[s,1], color=pred_color[0])\n",
+    "\n",
+    "control = getattr(control_run, f'{mode}_predictions')\n",
+    "s = control.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[1,0].plot(control.t[s], control[s,1], '-', color=control_color[0])\n",
+    "\n",
+    "\n",
+    "mode = 'beh'\n",
+    "pred, target = getattr(run_all, f'{mode}_predictions'), getattr(run_all, f'{mode}_target')\n",
+    "s = target.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[0,1].plot(target.t[s], target[s], 'k')\n",
+    "axs[1,1].plot(target.t[s], target[s], 'k')\n",
+    "s = pred.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[0,1].plot(pred.t[s], pred[s, 0], color=pred_color[1])\n",
+    "axs[0,1].plot(pred.t[s], pred[s, 1], color=pred_color[2])\n",
+    "\n",
+    "control = getattr(control_run, f'{mode}_predictions')\n",
+    "s = control.t\n",
+    "s = (xlim[0] < s) & (s < xlim[1])\n",
+    "axs[1,1].plot(control.t[s], control[s,0], '-', color=control_color[1])\n",
+    "axs[1,1].plot(control.t[s], control[s,1], '-', color=control_color[2])\n",
+    "\n",
+    "\n",
+    "axs[0,0].set_title('neural latent 1')\n",
+    "axs[0,1].set_title('arm position x and y (mm)')\n",
+    "\n",
+    "axs[0,0].set_ylabel('from joint latents')\n",
+    "axs[1,0].set_ylabel('from behavior')\n",
+    "\n",
+    "\n",
+    "for axis in axs[:, 0]:\n",
+    "    data_lim = np.array(axis.dataLim).T.flatten()\n",
+    "    bounds = data_lim\n",
+    "    bounds[:2] = (bounds[:2] - bounds[:2].mean()) * np.array([1.02, 1.02]) + bounds[:2].mean()\n",
+    "    bounds[2:] = (bounds[2:] - bounds[2:].mean()) * np.array([1.05, 1.05]) + bounds[2:].mean()\n",
+    "    axis.axis(bounds)\n",
+    "    axis.format_coord = lambda x, y: 'x={:g}, y={:g}'.format(x, y)\n",
+    "\n",
+    "# this prints the last-half means\n",
+    "for i, l in enumerate([\n",
+    "    [\n",
+    "        (0,0,f'{run_all.neural_correlations[1]:.2f}',dict(color=pred_color[0])),\n",
+    "        (0,1, f'{run_all.beh_correlations[1]:.2f}', dict(color=pred_color[2])),\n",
+    "        (1,1, f'{run_all.beh_correlations[0]:.2f}', dict(color=pred_color[1])),\n",
+    "    ], \n",
+    "    [\n",
+    "        (0,0,f'{control_run.neural_correlations[1]:.2f}',dict(color=control_color[0])),\n",
+    "        (0,1, f'{control_run.beh_correlations[0]:.2f}', dict(color=control_color[1])),\n",
+    "        (1,1, f'{control_run.beh_correlations[1]:.2f}', dict(color=control_color[2])),\n",
+    "    ]\n",
+    "]):\n",
+    "    for idx, j, text, kw in l:\n",
+    "        x, y = .8, .98 - .05 * idx\n",
+    "        x, y = axs[i, j].transLimits.inverted().transform([x, y])\n",
+    "        axs[i, j].text(x, y, text, clip_on=False, verticalalignment='top', **kw)\n",
+    "\n",
+    "axs[0,1].set_yticks([])\n",
+    "axs[1,1].set_yticks([])\n",
+    "axs[1,0].set_xlabel('time (s)')\n",
+    "axs[1,1].set_xlabel('time (s)')\n",
+    "\n",
+    "fig.savefig(adaptive_latents.CONFIG['plot_save_path']/'performance.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T18:19:08.547680Z",
+     "start_time": "2024-10-23T18:19:07.756280Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "run_all.plot_results()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
    "metadata": {},
    "source": [
     "# Zong22 Portion"
@@ -335,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "26",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:38.534593Z",
@@ -349,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "27",
    "metadata": {},
    "source": [
     "## Dimensionality reduction comparison"
@@ -358,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "28",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T17:05:18.245911Z",
@@ -386,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,16 +645,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "30",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-04T17:05:23.856250Z",
-     "start_time": "2024-10-04T17:05:23.488430Z"
+     "end_time": "2024-10-23T19:02:30.461620Z",
+     "start_time": "2024-10-23T19:02:29.224570Z"
     }
    },
    "outputs": [],
    "source": [
-    "run = zong_run\n",
+    "run = odoherty_run\n",
+    "current_t = 507.8\n",
     "grid_n=13\n",
     "square_radius=None\n",
     "arrow_alpha=0\n",
@@ -420,7 +670,7 @@
     "for idx, latents in enumerate([run.pro_latents, run.jpca_latents, run.ica_latents]):\n",
     "    ax: plt.Axes = axs[idx,0]\n",
     "    \n",
-    "    plot_history_with_tail(ax, latents, current_t, tail_length=1, invisible=True)\n",
+    "    plot_history_with_tail(ax, latents, current_t, tail_length=.5, invisible=False)\n",
     "\n",
     "    if idx == 2:\n",
     "        ax.set_xlim([-6,6])\n",
@@ -462,12 +712,13 @@
     "\n",
     "axs[0, 0].set_ylabel('pro')\n",
     "axs[1, 0].set_ylabel('jpca')\n",
-    "axs[2, 0].set_ylabel('ica')"
+    "axs[2, 0].set_ylabel('ica')\n",
+    "fig.savefig(adaptive_latents.CONFIG['plot_save_path']/'monkey_flow.svg')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "31",
    "metadata": {},
    "source": [
     "## Stimulation figure"
@@ -476,7 +727,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "32",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T20:48:20.978307Z",
+     "start_time": "2024-10-23T20:45:16.747605Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fish_run = prp.PipelineRun(**prp.PipelineRun.default_parameter_values['naumann24u'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
@@ -551,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "34",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
