--- a/workspace/nauman24u_scratch.ipynb
+++ b/workspace/nauman24u_scratch.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:46:26.798121Z",
-     "start_time": "2024-08-29T18:46:26.793486Z"
+     "end_time": "2024-10-21T21:51:36.021575Z",
+     "start_time": "2024-10-21T21:51:32.142063Z"
     },
     "collapsed": true
    },
@@ -19,6 +19,7 @@
     "import adaptive_latents\n",
     "import itertools\n",
     "import tqdm.notebook as tqdm\n",
+    "from matplotlib.lines import Line2D\n",
     "\n",
     "rng = np.random.default_rng()\n"
    ]
@@ -28,14 +29,151 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:22:56.933594Z",
-     "start_time": "2024-08-29T18:22:56.360452Z"
+     "end_time": "2024-10-21T21:51:39.625923Z",
+     "start_time": "2024-10-21T21:51:36.025061Z"
     }
    },
    "outputs": [],
    "source": [
-    "d = datasets.Naumann24uDataset(datasets.Naumann24uDataset.sub_datasets[-1])\n",
+    "d = datasets.Naumann24uDataset(datasets.Naumann24uDataset.sub_datasets[1])\n",
     "d.sub_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "plt.hist(np.diff(d.neural_data.t), bins=100, log=True)\n",
+    "plt.xlabel('sample time difference')\n",
+    "plt.ylabel('number of observations')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-21T18:03:23.359257Z",
+     "start_time": "2024-10-21T18:03:22.194823Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "beh = d.BehaviorClassifier().offline_run_on(NumpyTimedDataSource(d.tail_angle, d.tail_times), convinient_return=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-21T17:15:07.443743Z",
+     "start_time": "2024-10-21T17:15:07.040700Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "history = deque(maxlen=15)\n",
+    "\n",
+    "output = []\n",
+    "\n",
+    "for a in d.tail_angle:\n",
+    "    history.append(a)\n",
+    "    \n",
+    "    h = np.array(history)\n",
+    "    if np.isnan(history).any():\n",
+    "        output.append(np.nan)\n",
+    "    elif (h > .3).any():\n",
+    "        if (h < -.3).any():\n",
+    "            output.append(3)\n",
+    "        else:\n",
+    "            output.append(1)\n",
+    "    elif (h < -.3).any():\n",
+    "        output.append(2)\n",
+    "    else:\n",
+    "        output.append(0)\n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-21T18:13:43.060547Z",
+     "start_time": "2024-10-21T18:13:42.912893Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "displacement =  d.behavioral_data.a[:, -1, :] - d.behavioral_data.a[:, 0, :]\n",
+    "plt.plot(d.behavioral_data.t, d.behavioral_data.a[:, 0, :])\n",
+    "plt.plot(d.pose_class.t, d.pose_class)\n",
+    "plt.xlabel('time (s)')\n",
+    "plt.ylabel('angle between ends of tail')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-21T18:22:56.402268Z",
+     "start_time": "2024-10-21T18:22:17.665426Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "last_of_each_class = [None,None,None,None]\n",
+    "for sample, c in zip(d.tail_position, d.pose_class):\n",
+    "    last_of_each_class[c], = plt.plot(sample[:, 0], sample[:, 1], color=f'C{c}', alpha=0.1)\n",
+    "\n",
+    "plt.legend(handles=[\n",
+    "    Line2D([0], [0], color='C0', label='no motion'),\n",
+    "    Line2D([0], [0], color='C1', label='down'),\n",
+    "    Line2D([0], [0], color='C2', label='up'),\n",
+    "    Line2D([0], [0], color='C3', label='both'),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T21:19:55.009988Z",
+     "start_time": "2024-10-17T21:19:06.320670Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "fps = 90\n",
+    "with adaptive_latents.AnimationManager(fps=fps, filetype='mp4') as am:\n",
+    "    video_times = np.arange(\n",
+    "        50,\n",
+    "        60,\n",
+    "        1/fps,\n",
+    "    )\n",
+    "    for current_t in video_times:\n",
+    "        old_lims = None\n",
+    "        if current_t != video_times[0]:\n",
+    "            old_lims = am.axs[0,0].axis()\n",
+    "        am.axs[0,0].cla()\n",
+    "        idx = np.argmin(np.abs(current_t - d.behavioral_data.t))\n",
+    "        sample = d.behavioral_data.a[idx,...]\n",
+    "        am.axs[0,0].plot(sample[:, 0], sample[:, 1], color='C0')\n",
+    "        if old_lims is not None:\n",
+    "            adaptive_latents.plotting_functions.use_bigger_lims(am.axs[0,0], old_lims)\n",
+    "        am.axs[0,0].set_title(f't = {current_t:.2f}')\n",
+    "        am.grab_frame()\n"
    ]
   },
   {
@@ -50,8 +188,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:22:58.077701Z",
-     "start_time": "2024-08-29T18:22:57.874531Z"
+     "end_time": "2024-10-17T20:30:12.970717Z",
+     "start_time": "2024-10-17T20:30:12.885771Z"
     }
    },
    "outputs": [],
@@ -59,10 +197,10 @@
     "neuron_index = 65\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 4))\n",
-    "ax.plot(d.C[neuron_index,:])\n",
-    "for idx, (time, angle, _) in d.visual_stimuli.iterrows():\n",
+    "ax.plot(d.neural_data.t, d.neural_data.a[:, 0, neuron_index])\n",
+    "for idx, (time, angle) in d.visual_stimuli[['time', 'l_angle']].iterrows():\n",
     "    plt.axvline(time, color=d.a2c(angle), alpha=.5)\n",
-    "for time in d.opto_stimulations['sample']:\n",
+    "for time in d.opto_stimulations['time']:\n",
     "    plt.axvline(time, color='k', alpha=.5)"
    ]
   },
@@ -71,19 +209,20 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:22:58.634Z",
-     "start_time": "2024-08-29T18:22:58.334791Z"
+     "end_time": "2024-10-17T20:30:13.037625Z",
+     "start_time": "2024-10-17T20:30:12.971186Z"
     }
    },
    "outputs": [],
    "source": [
     "t1, t2 = 0, 500\n",
-    "vis_presentation_window = np.array([0, 20])\n",
+    "vis_presentation_window = 20\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 4))\n",
     "plt.plot(d.C[neuron_index,t1:t2])\n",
-    "for idx, sample, l_angle, r_angle in d.visual_stimuli.itertuples():\n",
-    "    stim_window = sample + vis_presentation_window\n",
+    "for idx, frame_sample, _, l_angle, r_angle in d.visual_stimuli.itertuples():\n",
+    "    frame_sample = int(frame_sample)\n",
+    "    stim_window = d.frame_times[[frame_sample,frame_sample+vis_presentation_window]]\n",
     "    if t1 <= stim_window[0] and t2 >= stim_window[1]:\n",
     "        ax.axvspan(stim_window[0], stim_window[1], alpha=0.2, color=d.a2c(l_angle))\n"
    ]
@@ -100,8 +239,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:23:00.240992Z",
-     "start_time": "2024-08-29T18:22:59.093868Z"
+     "end_time": "2024-10-17T20:30:13.488390Z",
+     "start_time": "2024-10-17T20:30:13.038570Z"
     },
     "collapsed": false
    },
@@ -121,8 +260,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:23:00.711968Z",
-     "start_time": "2024-08-29T18:23:00.241904Z"
+     "end_time": "2024-10-17T20:30:13.961728Z",
+     "start_time": "2024-10-17T20:30:13.489223Z"
     }
    },
    "outputs": [],
@@ -131,9 +270,9 @@
     "\n",
     "pro.plot_Q_stability(ax)\n",
     "\n",
-    "for time in d.opto_stimulations['sample']:\n",
+    "for time in d.opto_stimulations['time']:\n",
     "    plt.axvline(time, color='k')\n",
-    "plt.xlim([1800, 3200])\n",
+    "plt.xlim([475, 750])\n",
     "plt.ylim([0, 0.01]);\n"
    ]
   },
@@ -149,8 +288,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:23:00.769136Z",
-     "start_time": "2024-08-29T18:23:00.740419Z"
+     "end_time": "2024-10-17T20:30:13.977855Z",
+     "start_time": "2024-10-17T20:30:13.962971Z"
     }
    },
    "outputs": [],
@@ -173,8 +312,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:23:02.984447Z",
-     "start_time": "2024-08-29T18:23:01.641936Z"
+     "end_time": "2024-10-17T20:30:14.640793Z",
+     "start_time": "2024-10-17T20:30:13.979839Z"
     }
    },
    "outputs": [],
@@ -221,8 +360,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:23:03.509551Z",
-     "start_time": "2024-08-29T18:23:02.985611Z"
+     "end_time": "2024-10-17T20:30:14.838068Z",
+     "start_time": "2024-10-17T20:30:14.641648Z"
     }
    },
    "outputs": [],
@@ -255,47 +394,37 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T18:46:27.939726Z",
-     "start_time": "2024-08-29T18:46:27.714479Z"
+     "end_time": "2024-10-17T20:30:15.011198Z",
+     "start_time": "2024-10-17T20:30:14.838832Z"
     }
    },
    "outputs": [],
    "source": [
     "\n",
-    "k = 10\n",
+    "def show_reactions_to_stims(ax, output, t, d, n_seconds_after=15, stim_group_number=4):\n",
+    "    ax.cla()\n",
+    "    s = t > d.opto_stimulations.loc[0, 'time']\n",
+    "    ax.scatter(output[s,0], output[s,1], s=10, lw=0, color=np.array([1,1,1])*.8,)\n",
     "\n",
-    "output, t = (offline_output, offline_t) if False else (online_output, online_t)\n",
-    "# output, t = \n",
+    "    n_stims_per_group = 5\n",
+    "    r = np.arange(n_stims_per_group*stim_group_number,n_stims_per_group*stim_group_number+n_stims_per_group)\n",
+    "\n",
+    "    assert np.std(d.opto_stimulations.loc[r, 'target_neuron']) == 0\n",
+    "\n",
+    "    for ii, i in enumerate(r):\n",
+    "        start = int(d.opto_stimulations.loc[i, 'time'])\n",
+    "        s = (start <= t) & (t <= start + n_seconds_after)\n",
+    "        ax.plot(output[s,axis_0], output[s,axis_1], color=matplotlib.colors.hsv_to_rgb(np.array([10/360, 1, (8-ii)/8])))\n",
+    "\n",
+    "        start_idx = np.nonzero(s)[0][0]\n",
+    "        ax.scatter(output[start_idx, axis_0], output[start_idx,axis_1], c='k', s=15)\n",
+    "        # ax.arrow(x = output[start_idx, 0], y = output[start_idx, 1], dx = output[start_idx+1, 0] - output[start_idx, 0], dy= output[start_idx+1, 1] - output[start_idx, 1], zorder=2, length_includes_head=True, head_width=.2, color='k') \n",
+    "    \n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8,8))\n",
-    "s = t > d.opto_stimulations.loc[0, 'sample']\n",
-    "ax.scatter(output[s,0], output[s,1], s=10, lw=0, color=np.array([1,1,1])*.8,)\n",
-    "r = np.arange(5*k,5*k+5)\n",
-    "assert np.std(d.opto_stimulations.loc[r, 'target_neuron']) == 0\n",
-    "for ii, i in enumerate(r):\n",
-    "    start = int(d.opto_stimulations.loc[i, 'sample'])\n",
-    "    s = (start <= t) & (t <= start + 34)\n",
-    "    ax.plot(output[s,axis_0], output[s,axis_1], color=matplotlib.colors.hsv_to_rgb(np.array([10/360, 1, (8-ii)/8])))\n",
-    "    \n",
-    "    start_idx = np.nonzero(s)[0][0]\n",
-    "    ax.scatter(output[start_idx, axis_0], output[start_idx,axis_1], c='k', s=15)\n",
-    "    # ax.arrow(x = output[start_idx, 0], y = output[start_idx, 1], dx = output[start_idx+1, 0] - output[start_idx, 0], dy= output[start_idx+1, 1] - output[start_idx, 1], zorder=2, length_includes_head=True, head_width=.2, color='k') \n",
-    "\n",
-    "fig.savefig(adaptive_latents.CONFIG['plot_save_path'] / \"plot.svg\")\n",
+    "show_reactions_to_stims(ax, offline_output, offline_t, d, stim_group_number=7)\n",
+    "# fig.savefig(adaptive_latents.CONFIG['plot_save_path'] / \"plot.svg\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Requests from Anne\n",
-    "* train on visual, project everything\n",
-    "* train on everything, project everything\n",
-    "* ignore visual, train and project\n",
-    "for each,\n",
-    "    * eigenspectra\n",
-    "    * scatterplot visual an photostim \n"
    ]
   },
   {
@@ -303,8 +432,42 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:42.951640Z",
-     "start_time": "2024-08-29T17:53:42.927476Z"
+     "end_time": "2024-10-17T20:38:12.809351Z",
+     "start_time": "2024-10-17T20:37:53.608753Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fps = 20\n",
+    "total_t = 16\n",
+    "with adaptive_latents.AnimationManager(fps=4*fps, filetype='webm') as am:\n",
+    "    for current_t in np.linspace(1, total_t, (total_t-1) * fps + 1):\n",
+    "        show_reactions_to_stims(am.axs[0,0], output, t, d, n_seconds_after=current_t, stim_group_number=7)\n",
+    "        am.grab_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T20:42:35.813679Z",
+     "start_time": "2024-10-17T20:42:35.802330Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import display, Video, Image\n",
+    "Video(\"/home/jgould/Documents/AdaptiveLatents/workspace/al_generated/plots/movie_2024-10-17-16-22-53-320.webm\", embed=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T20:42:42.368046Z",
+     "start_time": "2024-10-17T20:42:42.347263Z"
     }
    },
    "outputs": [],
@@ -319,8 +482,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:44.560279Z",
-     "start_time": "2024-08-29T17:53:42.955298Z"
+     "end_time": "2024-10-17T20:42:44.316468Z",
+     "start_time": "2024-10-17T20:42:43.523833Z"
     }
    },
    "outputs": [],
@@ -341,26 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:44.564063Z",
-     "start_time": "2024-08-29T17:53:44.561712Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "d.sub_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:44.599412Z",
-     "start_time": "2024-08-29T17:53:44.564636Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "interesting_combinations = {}\n",
@@ -414,15 +558,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:45.017885Z",
-     "start_time": "2024-08-29T17:53:44.601169Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib inline\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "\n",
@@ -443,12 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:45.033418Z",
-     "start_time": "2024-08-29T17:53:45.021804Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def pca(x):\n",
@@ -476,12 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:45.557543Z",
-     "start_time": "2024-08-29T17:53:45.036428Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -503,12 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:45.561725Z",
-     "start_time": "2024-08-29T17:53:45.558403Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u, s, vh = np.linalg.svd(v1[:,:10].T @ v2[:,:10])\n",
@@ -523,12 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:45.865509Z",
-     "start_time": "2024-08-29T17:53:45.562289Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %matplotlib qt\n",
@@ -543,12 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:45.877232Z",
-     "start_time": "2024-08-29T17:53:45.868246Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d.sub_dataset"
@@ -565,10 +679,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:46.104327Z",
-     "start_time": "2024-08-29T17:53:45.880787Z"
-    },
     "collapsed": false
    },
    "outputs": [],
@@ -580,12 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T17:53:46.207474Z",
-     "start_time": "2024-08-29T17:53:46.105524Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
