--- a/workspace/sfn_results.ipynb
+++ b/workspace/sfn_results.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T19:15:44.352339Z",
-     "start_time": "2024-10-02T19:15:44.344071Z"
+     "end_time": "2024-10-22T19:15:17.072986Z",
+     "start_time": "2024-10-22T19:15:15.031193Z"
     }
    },
    "outputs": [],
@@ -31,8 +31,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T19:15:44.704060Z",
-     "start_time": "2024-10-02T19:15:44.421928Z"
+     "end_time": "2024-10-22T19:15:17.428068Z",
+     "start_time": "2024-10-22T19:15:17.074086Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T20:08:52.221639Z",
-     "start_time": "2024-10-02T20:08:52.218138Z"
+     "end_time": "2024-10-22T19:15:17.439814Z",
+     "start_time": "2024-10-22T19:15:17.430695Z"
     }
    },
    "outputs": [],
@@ -77,8 +77,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T19:15:44.732593Z",
-     "start_time": "2024-10-02T19:15:44.708788Z"
+     "end_time": "2024-10-22T19:22:20.684062Z",
+     "start_time": "2024-10-22T19:22:20.674408Z"
     }
    },
    "outputs": [],
@@ -94,22 +94,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
+    "%matplotlib inline\n",
     "fig, axs = None, None\n",
-    "for x in binary_search_range(-5, 5, n_samples=5, tried=tried):\n",
-    "    parameters = dict(prp.PipelineRun.default_parameter_values['zong22'])\n",
-    "    parameters['neural_scale'] = 1/1000\n",
-    "    parameters['neural_lag'] = 0\n",
-    "    parameters['exit_time'] = -1\n",
-    "    parameters['sub_dataset_identifier'] = 3\n",
-    "    parameters['bw_step'] = 10**0.138\n",
+    "for x in binary_search_range(-3, 1, tried=tried):\n",
+    "    parameters = dict(prp.PipelineRun.default_parameter_values['naumann24u'])\n",
+    "    parameters['drop_behavior'] = True\n",
+    "    parameters['neural_smoothing_tau'] = 10**-.25\n",
+    "    parameters['beh_type'] = 'bout'\n",
+    "    # parameters['exit_time'] = 600\n",
     "    run = prp.PipelineRun(**parameters)\n",
     "    runs.append(run)\n",
     "    tried.append(x)\n",
     "    \n",
     "    fig, axs = prp.PipelineRun.compare_metrics_across_runs(tried, runs, fig, axs)\n",
-    "    display.clear_output(wait=True)\n",
+    "    display.clear_output()\n",
     "    display.display(fig)\n",
     "\n"
    ]
@@ -120,26 +118,8 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T19:54:58.650835Z",
-     "start_time": "2024-10-02T19:54:58.419397Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "reload(prp)\n",
-    "fig, axs = prp.PipelineRun.compare_metrics_across_runs(tried, runs);\n",
-    "# fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-02T19:57:42.070646Z",
-     "start_time": "2024-10-02T19:57:41.480912Z"
+     "end_time": "2024-10-22T19:09:48.911100Z",
+     "start_time": "2024-10-22T19:09:48.315309Z"
     }
    },
    "outputs": [],
@@ -151,11 +131,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T19:21:32.276949Z",
-     "start_time": "2024-10-02T19:21:32.169319Z"
+     "end_time": "2024-10-22T19:09:48.952278Z",
+     "start_time": "2024-10-22T19:09:48.911957Z"
     }
    },
    "outputs": [],
@@ -166,11 +146,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-02T19:21:32.713320Z",
-     "start_time": "2024-10-02T19:21:32.277643Z"
+     "end_time": "2024-10-22T19:09:49.453574Z",
+     "start_time": "2024-10-22T19:09:48.952919Z"
     }
    },
    "outputs": [],
@@ -226,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "# Other Datasts"
